examples/test/testpolicy15250.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15250
  namespace: namespace435
spec:
  podSelector:
    matchLabels:
      key48: value39
      key0: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value28
          key4: value38
          key38: value0
      podSelector:
        matchLabels:
          key36: value48
          key19: value25
          key14: value8
